# point_cloud_renderer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  commpare.py  compare.py  plot.py  test.py
include/: AsyncImageWriter.h  Timer.h  happly.h  render.cuh  types.h
src/: main.cu  render.cu
src/lod/: lod.cuh  lod_util.cuh  main.cu
src/octree/: aabb.h  octree.h  octree_builder.cu  octree_builder.cuh  octree_kernel.cuh  tree_config.h
src/util/: cuda_operators.cuh  cuda_util.cuh  tree_tools.h  types.cuh
